# WizLib

./: .dyngle.yml  .gitignore  .swytchitrc.sh  CHANGELOG.md  PACKAGE.md  README.md  book.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: SUMMARY.md  best-practices.md  class-family.md  command.md  config-handler.md  overview.md  stream-handler.md  super-wrapper.md  testing.md  ui-handler.md  wiz-app.md
template/: .dyngle.yml  .gitignore  .swytchitrc.sh  PACKAGE.md  README.md  pyproject.toml
template/template/: __init__.py  __main__.py
template/template/command/: __init__.py  do_command.py
template/test/: __init__.py  test_command_do.py
test/: __init__.py  test_app.py  test_class_family.py  test_command.py  test_config_shell.py  test_confighandler_return_data_object.py  test_parser.py  test_super_wrapper.py  test_super_wrapper_multi.py
test/data_class_family/: atriarch.py  child.py  grandchild.py
test/dummy/: __init__.py  __main__.py  config.yml
test/dummy/command/: __init__.py  dance_command.py  draw_command.py  drive_command.py  eat_command.py  error_command.py  math_command.py  own_command.py  sing_command.py  talk_command.py  thank_command.py
test/ui/: test_chooser.py  test_default_ui.py  test_shell_line_editor.py  test_shell_ui.py  test_text_wrapper.py
util/: editor.py  keytester.py
wizlib/: stream_handler.py  test_case.py
wizlib/ui/shell/: line_editor.py
