[tool.poetry]
name = "wizlib"
version = "1.0.1"
description = "Build configurable CLI tools easily in Python (a framework)"
authors = ["Steampunk Wizard <wizlib@steamwiz.io>"]
license = "MIT"
readme = "PACKAGE.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
readchar = "^4.0.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
pycodestyle = "^2.11.0"
autopep8 = "^2.0.4"

[tool.poetry.group.development.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
tag_format = "v{version}"
